--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.77.0",
+    "lucide-react": "^0.552.0",
     "next": "16.0.0",
     "openai": "^6.7.0",
     "react": "19.2.0",
